@startuml UnoMas_DiagramaPatrones

title Sistema Uno Mas - Patrones de Diseño Implementados

' ====================================
' PATRÓN STRATEGY
' ====================================
package "STRATEGY PATTERN" <<Rectangle>> {
  interface EmparejamientoStrategy {
    + esCompatible(usuario, partido): boolean
    + calcularCompatibilidad(usuario, partido): double
  }
  
  class NivelHabilidadStrategy {
    + esCompatible(): boolean
    + calcularCompatibilidad(): double
  }
  
  class CercaniaStrategy {
    + esCompatible(): boolean
    + calcularCompatibilidad(): double
  }
  
  class HistorialStrategy {
    + esCompatible(): boolean
    + calcularCompatibilidad(): double
  }
  
  EmparejamientoStrategy <|.. NivelHabilidadStrategy
  EmparejamientoStrategy <|.. CercaniaStrategy
  EmparejamientoStrategy <|.. HistorialStrategy
}

note right of EmparejamientoStrategy
  <b>Propósito:</b>
  Define familia de algoritmos
  intercambiables para emparejar
  jugadores con partidos
  
  <b>Beneficio:</b>
  Fácil agregar nuevas estrategias
  sin modificar código existente
end note

' ====================================
' PATRÓN STATE
' ====================================
package "STATE PATTERN" <<Rectangle>> {
  interface EstadoPartido {
    + equipoCompleto(partido): void
    + confirmar(partido): void
    + iniciar(partido): void
  }
  
  class NecesitamosJugadoresState
  class PartidoArmadoState
  class ConfirmadoState
  class EnJuegoState
  class FinalizadoState
  class CanceladoState
  
  EstadoPartido <|.. NecesitamosJugadoresState
  EstadoPartido <|.. PartidoArmadoState
  EstadoPartido <|.. ConfirmadoState
  EstadoPartido <|.. EnJuegoState
  EstadoPartido <|.. FinalizadoState
  EstadoPartido <|.. CanceladoState
  
  class PartidoContext {
    - estado: EstadoPartido
    + cambiarEstado(estado): void
  }
  
  PartidoContext --> EstadoPartido : usa
}

note right of EstadoPartido
  <b>Propósito:</b>
  Permite cambiar comportamiento
  del partido según su estado actual
  
  <b>Beneficio:</b>
  Transiciones de estado claras
  y validaciones automáticas
end note

' ====================================
' PATRÓN OBSERVER
' ====================================
package "OBSERVER PATTERN" <<Rectangle>> {
  abstract class PartidoObservable {
    - observers: List
    + agregarObserver(observer): void
    + notificarObservadores(mensaje): void
  }
  
  interface NotificacionObserver {
    + actualizar(partido, mensaje): void
  }
  
  class EmailNotificationObserver
  class PushNotificationObserver
  
  PartidoObservable --> NotificacionObserver : notifica
  NotificacionObserver <|.. EmailNotificationObserver
  NotificacionObserver <|.. PushNotificationObserver
}

note right of PartidoObservable
  <b>Propósito:</b>
  Desacopla el partido de los
  mecanismos de notificación
  
  <b>Beneficio:</b>
  Agregar nuevos tipos de
  notificaciones sin modificar Partido
end note

' ====================================
' PATRÓN ADAPTER
' ====================================
package "ADAPTER PATTERN" <<Rectangle>> {
  interface NotificacionServiceAdapter {
    + enviarNotificacion(dest, titulo, msg): void
  }
  
  class EmailServiceAdapter {
    - mailSender: JavaMailSender
  }
  
  class FirebaseServiceAdapter {
    - firebaseEnabled: boolean
  }
  
  NotificacionServiceAdapter <|.. EmailServiceAdapter
  NotificacionServiceAdapter <|.. FirebaseServiceAdapter
  
  EmailServiceAdapter --> "JavaMail\n(External)" : adapta
  FirebaseServiceAdapter --> "Firebase\n(External)" : adapta
}

note right of NotificacionServiceAdapter
  <b>Propósito:</b>
  Unifica diferentes servicios
  externos bajo interfaz común
  
  <b>Beneficio:</b>
  Fácil cambiar o agregar
  servicios de notificación
end note

' ====================================
' PATRÓN FACTORY
' ====================================
package "FACTORY PATTERN" <<Rectangle>> {
  class PartidoFactory {
    + crearPartido(...): Partido
    + crearPartidoPersonalizado(...): Partido
    + crearPartidoRapido(...): Partido
  }
  
  class Partido {
    - id: Long
    - tipoDeporte: TipoDeporte
    - jugadores: List
    - estado: EstadoPartido
  }
  
  PartidoFactory ..> Partido : crea
}

note right of PartidoFactory
  <b>Propósito:</b>
  Centraliza lógica de creación
  de objetos complejos
  
  <b>Beneficio:</b>
  Encapsula complejidad de
  inicialización de partidos
end note

' ====================================
' PATRÓN MVC
' ====================================
package "MVC PATTERN" <<Rectangle>> {
  class Controller {
    + endpoint(...): ResponseEntity
  }
  
  class Service {
    + businessLogic(...): DTO
  }
  
  class Repository {
    + save(entity): Entity
    + findById(id): Optional
  }
  
  class Model {
    - atributos
  }
  
  Controller --> Service : usa
  Service --> Repository : usa
  Repository --> Model : persiste
}

note right of Controller
  <b>Propósito:</b>
  Separa responsabilidades en
  Presentación, Lógica y Datos
  
  <b>Beneficio:</b>
  Código organizado, mantenible
  y testeable
end note

' ====================================
' RELACIONES ENTRE PATRONES
' ====================================
Service --> PartidoFactory : usa (Factory)
Service --> EmparejamientoStrategy : usa (Strategy)
Partido --> EstadoPartido : tiene (State)
Partido --|> PartidoObservable : extends (Observer)
EmailNotificationObserver --> NotificacionServiceAdapter : usa (Adapter)
PushNotificationObserver --> NotificacionServiceAdapter : usa (Adapter)

legend center
  <b>Sistema Uno Mas - 6 Patrones de Diseño</b>
  
  <b>1. MVC:</b> Arquitectura general de la aplicación
  <b>2. Strategy:</b> Algoritmos de emparejamiento intercambiables
  <b>3. State:</b> Gestión de estados del partido
  <b>4. Observer:</b> Sistema de notificaciones desacoplado
  <b>5. Adapter:</b> Unificación de servicios externos
  <b>6. Factory:</b> Creación centralizada de partidos
  
  <b>Beneficios de aplicar estos patrones:</b>
  • Código más mantenible y extensible
  • Bajo acoplamiento entre componentes
  • Alta cohesión dentro de cada componente
  • Facilita testing y debugging
  • Cumple principios SOLID
endlegend

@enduml
